--- a/chat/Dockerfile
+++ b/chat/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.11-slim
 
-WORKDIR /servidor
+WORKDIR /chat
 
 COPY . .
 
@@ -9,5 +9,5 @@ RUN pip install --no-cache-dir -r requirements.txt
 EXPOSE 12345
 
 # CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "5000"]
-CMD ["python", "./servidor.py"]
+CMD ["python", "./chat.py"]
 
