--- a/chat/Dockerfile
+++ b/chat/Dockerfile
@@ -1,13 +1,6 @@
 FROM python:3.11-slim
-
-WORKDIR /chat
-
-COPY . .
-
+WORKDIR /app
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
-
-EXPOSE 12345
-
-# CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "5000"]
-CMD ["python", "./chat.py"]
-
+COPY . .
+CMD ["python", "chat.py"]
