--- a/chat/Dockerfile
+++ b/chat/Dockerfile
@@ -1,6 +1,11 @@
 FROM python:3.11-slim
-WORKDIR /app
+
+WORKDIR /chat
+
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
+
 COPY . .
-CMD ["python", "chat.py"]
+
+RUN chmod +x entrypoint.sh
+ENTRYPOINT ["./entrypoint.sh"]
