--- a/chat/Dockerfile
+++ b/chat/Dockerfile
@@ -7,5 +7,6 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-RUN chmod +x entrypoint.sh
+RUN chmod +x entrypoint.sh \
+    && sed -i 's/\r$//' entrypoint.sh
 ENTRYPOINT ["/bin/sh", "entrypoint.sh"]
